# AgenticAI

./: .env  .env.template  .gitignore  Dockerfile  README.md  __init__.py  main.py  pyproject.toml  requirements.txt
analytics/: insights.py
auth/: login.py
browser/: driver.py
config/: settings.py
jobs/: apply.py  evaluator.py
llm/: provider.py
memory/: agent.db  llm_cache.json  session_cookies.json
notifications/: telegram.py
storage/: database.py
tests/: test_evaluator.py
utils/: credentials.py  logger.py
