[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "naukri-agent"
version = "2.0.0"
description = "AI-powered Naukri.com job application agent"
requires-python = ">=3.10"
dependencies = [
    # Browser automation
    "selenium>=4.18.1",
    "webdriver-manager>=4.0.1",

    # LLM — Gemini free tier (15 req/min, 1500/day free)
    "google-generativeai>=0.5.4",

    # Config & validation
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.1",

    # Retry logic
    "tenacity>=8.2.3",

    # CLI UI
    "rich>=13.7.1",

    # Scheduler
    "APScheduler>=3.10.4",

    # Keyring for secure credential storage
    "keyring>=25.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.6",
    "coverage>=7.4.4",
]

[project.scripts]
naukri-agent = "naukri_agent_v2.main:cli"
